--- a/ModernControls/Themes/BlockPanel.xaml
+++ b/ModernControls/Themes/BlockPanel.xaml
@@ -7,23 +7,24 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type local:BlockPanel}">
-        <Setter Property="Foreground" Value="{StaticResource BasicFontColorBrush}"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:BlockPanel}">
-                    <Border BorderBrush="{StaticResource BorderColorBrush}" BorderThickness="1" Background="{StaticResource WorkplaceBackgroundBrush}">
-                        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <DockPanel x:Name="Header" Background="{StaticResource WindowBackgroundBrush}">
-                                <TextBlock DockPanel.Dock="Left" Text="{Binding Title, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" Foreground="{StaticResource BasicFontColorBrush}" FontSize="14" Margin="2,0,0,0"/>
-                            </DockPanel>
-                            <ContentPresenter />
-                        </StackPanel>
-                    </Border>
+                    <Grid Background="{StaticResource WorkplaceBackgroundBrush}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <DockPanel x:Name="Header" Background="{StaticResource WindowBackgroundBrush}">
+                            <TextBlock DockPanel.Dock="Left" Text="{Binding Title, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" Foreground="{StaticResource BasicFontColorBrush}" FontSize="14" Margin="2,0,0,0"/>               
+                        </DockPanel>
+                        <ContentPresenter Grid.Row="1" />
+                    </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Header" Property="Background" Value="{StaticResource ActionColorBrush}"></Setter>
+                            <Setter TargetName="Header" Property="Background" Value="{StaticResource ActionColorBrush}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
