--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls">
+                    xmlns:local="clr-namespace:ModernControls"
+                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/GridSplitterStyle.xaml"/>
@@ -10,6 +11,7 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTabControlStyle.xaml"/>
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTreeViewStyle.xaml"/>
         <ResourceDictionary Source="/ModernControls;component/Themes/BlockPanel.xaml"/>
+        <ResourceDictionary Source="/ModernControls;component/Themes/ScrollBarStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type local:Workplace}">
@@ -82,11 +84,15 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="3*"/>
                                     <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="1*" MaxHeight="150"/>
+                                    <RowDefinition Height="1*" MaxHeight="500"/>
                                 </Grid.RowDefinitions>
                                 <local:ExtendedTabControl x:Name="WorkPlaceTabs"/>
                                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
-                                <local:BlockPanel Grid.Row="2" Title="Output"/>
+                                <local:BlockPanel Grid.Row="2" Title="Output" VerticalAlignment="Stretch">
+                                    <ScrollViewer>
+                                        <TextBlock x:Name="DebugConsole" TextWrapping="Wrap" Foreground="{StaticResource BasicFontColorBrush}" FontSize="12" />
+                                    </ScrollViewer>
+                                </local:BlockPanel>
                             </Grid>
                             <Grid Grid.Column="4">
                                 <Grid.RowDefinitions>
