--- a/ModernControls/Themes/DebugConsole.xaml
+++ b/ModernControls/Themes/DebugConsole.xaml
@@ -1,12 +1,38 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls">
+                    xmlns:local="clr-namespace:ModernControls"
+                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
+                    xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MTitleBarButtonStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    
+
+    <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues"
+                            ObjectType="{x:Type system:Enum}">
+        <ObjectDataProvider.MethodParameters>
+            <x:Type TypeName="internalClasses:LogType"/>
+        </ObjectDataProvider.MethodParameters>
+    </ObjectDataProvider>
+
+    <Style x:Key="DebugListBox" TargetType="ListBox">
+        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBox">
+                    <Border Name="Border" BorderThickness="0" >
+                        <ScrollViewer>
+                            <StackPanel Margin="2" IsItemsHost="True" />
+                        </ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="{x:Type local:DebugConsole}">
         <Setter Property="Template">
             <Setter.Value>
@@ -15,13 +41,17 @@
                         <DockPanel>
                             <ToolBarTray DockPanel.Dock="Top">
                                 <ToolBar Band="0" BandIndex="0">
-                                    <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Height="25" Content="AllLogs" FontSize="12" />
-                                    <Separator/>
+                                    <ComboBox ItemsSource="{Binding Source={StaticResource DataFromEnum}}"  SelectedValue="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=CurrentLogType, Mode=TwoWay }" />
                                 </ToolBar>
                             </ToolBarTray>
-                            <ScrollViewer Focusable="False" CanContentScroll="False" Padding="4" Background="{StaticResource WorkplaceBackgroundBrush}" Margin="0,4,0,0">
-                                <TextBlock TextWrapping="Wrap" x:Name="TextOfLogs" Foreground="{StaticResource BasicFontColorBrush}" FontSize="12" />
-                            </ScrollViewer>
+                            <ListBox ItemsSource="{Binding}" x:Name="DebugList" Style="{StaticResource DebugListBox}" DockPanel.Dock="Top" Height="Auto" VerticalAlignment="Top">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type internalClasses:Log}">
+                                        <TextBlock Text="{Binding Path=Text}" Foreground="{Binding Path=Type, Converter={converters:LogsTypeToColorConverter}}"/>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                            <TextBox HorizontalAlignment="Stretch" Foreground="{StaticResource BasicFontColorBrush}" Background="{StaticResource WorkplaceBackgroundBrush}" BorderBrush="{StaticResource BorderColorBrush}" BorderThickness="1" Text="Inpuc command" DockPanel.Dock="Bottom" VerticalContentAlignment="Center" VerticalAlignment="Bottom"/>
                         </DockPanel>
                         </Border>
                 </ControlTemplate>
