--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -1,6 +1,7 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:ModernControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MWindowStyle.xaml" />
@@ -11,10 +12,13 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTreeViewStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/BlockPanel.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/DebugConsole.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/DrawCanvasStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    
 
     
 
-    
+
+
+
+
 </ResourceDictionary>
