--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -1,7 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ModernControls"
-                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses">
+                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:core="clr-namespace:Core;assembly=Core"
+                    xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/GridSplitterStyle.xaml"/>
@@ -14,6 +17,12 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ScrollBarStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
+    <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+        <ObjectDataProvider.MethodParameters>
+            <x:Type TypeName="core:BlockTypes"/>
+        </ObjectDataProvider.MethodParameters>
+    </ObjectDataProvider>
+    
     <Style TargetType="{x:Type local:Workplace}">
         <Setter Property="Template">
             <Setter.Value>
@@ -71,13 +80,24 @@
                         </ToolBarTray>
                         <Grid VerticalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="0" MaxWidth="200"/>
+                                <ColumnDefinition MaxWidth="200"/>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition MaxWidth="200"/>
                             </Grid.ColumnDefinitions>
-                            <local:BlockPanel Title="Toolbox"/>
+                            <local:BlockPanel Title="Toolbox">
+                                <ListBox x:Name="ElementList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                                <Image Source="{Binding Converter={converters:BlockTypeToImgSourceConverter}}" Width="25" Height="25"/>
+                                                <TextBlock Text="{Binding}" Foreground="{StaticResource BasicFontColorBrush}" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </local:BlockPanel>
                             <GridSplitter Grid.Column="1" VerticalAlignment="Stretch"/>
                             <GridSplitter Grid.Column="3" VerticalAlignment="Stretch"/>
                             <Grid Grid.Column="2">
