--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ModernControls"
-                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:core="clr-namespace:Core;assembly=Core"
                     xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters">
@@ -20,7 +19,7 @@
     <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
         <ObjectDataProvider.MethodParameters>
             <x:Type TypeName="core:BlockTypes"/>
-        </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider.MethodParameters>          
     </ObjectDataProvider>
     
     <Style TargetType="{x:Type local:Workplace}">
@@ -92,7 +91,7 @@
                                         <DataTemplate>
                                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                                 <Image Source="{Binding Converter={converters:BlockTypeToImgSourceConverter}}" Width="25" Height="25"/>
-                                                <TextBlock Text="{Binding}" Foreground="{StaticResource BasicFontColorBrush}" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                                                <TextBlock Text="{Binding}" Foreground="{StaticResource BasicFontColorBrush}" VerticalAlignment="Center" />
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
