--- a/ModernControls/Themes/ExtendedTabControlStyle.xaml
+++ b/ModernControls/Themes/ExtendedTabControlStyle.xaml
@@ -1,11 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls">
+                    xmlns:local="clr-namespace:ModernControls"
+                    xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/Colors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/Geometry.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MTitleBarButtonStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/TextEditorStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <CollectionViewSource x:Key="TabList"/>
@@ -56,8 +58,10 @@
                 <ControlTemplate TargetType="{x:Type local:ExtendedTabItem}">
                     <Grid x:Name="Root">
                         <DockPanel x:Name="Border" Background="Transparent">
+                            <TextBlock DockPanel.Dock="Left" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content, Converter={converters:BoolToStarConverter}, Mode=TwoWay}" Style="{DynamicResource BaseFont}"/>
                             <ContentPresenter x:Name="ContentSite" VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Header"
                               Margin="6,2,6,2" RecognizesAccessKey="True" DockPanel.Dock="Left" />
+                            
                             <Button x:Name="CloseTabButton" Style="{StaticResource MTitleBarButtonStyle}" Visibility="Collapsed" Width="20" Height="20" DockPanel.Dock="Right">
                                 
                                 <Grid MaxHeight="9" MaxWidth="9">
