--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -12,12 +12,6 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTreeViewStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/BlockPanel.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/DebugConsole.xaml" />
+        <!--<ResourceDictionary Source="/ModernControls;component/Themes/TextEditorStyle.xaml" />-->
     </ResourceDictionary.MergedDictionaries>
-
-    
-
-
-
-
-
 </ResourceDictionary>
