--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -37,8 +37,8 @@
                                     <MenuItem Header="Solution" x:Name="OpenSolutionMenuItem" />
                                 </MenuItem>
                                 <Separator/>
-                                <MenuItem Header="Save"/>
-                                <MenuItem Header="Save All"/>
+                                <MenuItem Header="Save" x:Name="SaveMenuItem"/>
+                                <MenuItem Header="Save All" x:Name="SaveAllMenuItem"/>
                                 <Separator/>
                                 <MenuItem Header="Close" x:Name="CloseMenuItem"/>
                             </MenuItem>
@@ -79,14 +79,14 @@
                         </ToolBarTray>
                         <Grid VerticalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition MaxWidth="200"/>
+                                <ColumnDefinition Width="0" MaxWidth="200"/>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition MaxWidth="200"/>
                             </Grid.ColumnDefinitions>
                             <local:BlockPanel Title="Toolbox">
-                                <ListBox x:Name="ElementList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0">
+                                <ListBox x:Name="ElementList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0" Visibility="Collapsed">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
